...
    <string name="task_description">Task Description</string>
    <string name="total_tasks_0">Total tasks: 0</string>
    <string name="submitted">Submitted!</string>
    <string name="input_your_task_title">Input your task title</string>
    <string name="input_description_of_your_task">Input description of your task</string>
    <string name="task_details">Task Details</string>
    <string name="todo">TODO</string>
    <string name="username">Username:</string>
    <string name="enter_username">Enter Username</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="emailfield">Email</string>
...
