...
        android:alpha="1"
        android:backgroundTint="#FFFFFF"
        android:foregroundTint="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingActivityUsernameInputBox"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/SettingActivityUsernameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingActivityUsernameText"
        tools:ignore="Autofill,TextContrastCheck" />


    <Button
        android:id="@+id/SettingsActivityUsernameSaveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/save"
...
